# BB10-WebWorks-Framework

./: .gitignore  CMakeLists.txt
dependencies/configure-qsk/: configure-qsk
ext/: meta.mk
ext/bbm.platform/native/: bbm_bps.cpp  common.mk
ext/connection/native/: common.mk
ext/event/: index.js
ext/identity/: index.js
ext/io.filetransfer/native/: common.mk
ext/pim.calendar/: Attendee.js  CalendarEvent.js  CalendarEventFilter.js  CalendarFindOptions.js  CalendarFolder.js  CalendarRepeatRule.js  calendarUtils.js  client.js  index.js  manifest.json
ext/pim.calendar/native/: CMakeLists.txt  pim_calendar_js.cpp  pim_calendar_qt copy.cpp  pim_calendar_qt.cpp  pim_calendar_qt.hpp  timezone_utils.cpp  timezone_utils.hpp
ext/pim.calendar/native/unitTests/: CMakeLists.txt  test_main.cpp
ext/pim.contacts/native/: common.mk  pim_contacts_qt.cpp
ext/pim.messages/: Message.js  MessageAccount.js  MessageAddress.js  MessageAttachment.js  MessageBody.js  MessageContact.js  MessageError.js  MessageFolder.js  MessagesError.js  PimMessageJNEXT.js  client.js  index.js  manifest.json
ext/pim.messages/native/: CMakeLists.txt  pim_message_js.cpp  pim_message_js.hpp  pim_message_ndk.cpp  pim_message_ndk.hpp
ext/push/native/: common.mk
ext/sensors/: client.js
ext/sensors/native/: sensors_js.cpp  sensors_js.hpp  sensors_ndk.hpp
ext/system/: client.js  index.js
ext/ui.dialog/: client.js  index.js
ext/ui.dialog/native/: common.mk
ext/webviews/: client.js  index.js  webviews.js
lib/: childWebView.js  event.js  eventHandlers.js  overlayWebView.js  request.js  utils.js  webview.js
lib/plugins/: default.js
test/functional/Apps/ExternalStartup/: config.xml  index.html
test/functional/Apps/NoAccess/: index.html
test/functional/Apps/WildcardDomain/: config.xml  index.html
test/functional/Apps/WildcardExternalStartupPage/: config.xml
test/functional/automatic/: blackberry.pim.calendar.js  crossOrigin.js
test/functional/manual/: blackberry.pim.calendar.js
test/test-app/: config.xml
test/test-app/automatic/: SpecRunner.htm
test/test-app/manual/childWebView/: child.html  main.html
test/unit/ext/identity/: index.js
test/unit/ext/system/: client.js  index.js
test/unit/lib/: childWebView.js  overlayWebView.js  webview.js
(+3 files in other folders)
